Got rid of new site table and empty space next to select

--- a/frontend/src/components/RedirectSelect.html
+++ b/frontend/src/components/RedirectSelect.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Redirect Manager</title>
   <link rel="stylesheet" href="../design/RedirectSelect.css">
+  <link rel="stylesheet" href="../app/globals.css">
   <script src="../js/WebSelect.js"></script>
 </head>
 <body>
@@ -14,9 +15,8 @@
   <table>
     <thead>
       <tr>
-        <th>Select</th>
+        <th id="Select">Select</th>
         <th>Old URL</th>
-        <th>New URL</th>
       </tr>
     </thead>
     <tbody id="linkTable">
